[gd_scene load_steps=13 format=2]

[ext_resource path="res://sprites/items/powerskull_normal.png" type="Texture" id=1]
[ext_resource path="res://sprites/items/powerskull_color.png" type="Texture" id=2]
[ext_resource path="res://sprites/lights/light.png" type="Texture" id=3]
[ext_resource path="res://scripts/PowerSkull.gd" type="Script" id=4]
[ext_resource path="res://addons/Trail/trail_2d.gd" type="Script" id=5]

[sub_resource type="PhysicsMaterial" id=4]
friction = 0.3
bounce = 0.4

[sub_resource type="Curve" id=5]
_data = [ Vector2( 0, 0 ), 0.0, 0.0, 0, 0, Vector2( 1, 1 ), 1.4, 0.0, 0, 0 ]

[sub_resource type="CapsuleShape2D" id=3]
radius = 12.0
height = 10.0

[sub_resource type="CapsuleShape2D" id=2]
radius = 11.0
height = 12.0

[sub_resource type="Curve" id=6]
_data = [ Vector2( 0, 1 ), 0.0, 0.0, 0, 0, Vector2( 1, 0 ), 0.0, 0.0, 0, 0 ]

[sub_resource type="CurveTexture" id=7]
curve = SubResource( 6 )

[sub_resource type="ParticlesMaterial" id=8]
flag_disable_z = true
spread = 180.0
gravity = Vector3( 0, 0, 0 )
initial_velocity = 100.0
orbit_velocity = 0.0
orbit_velocity_random = 0.0
linear_accel = -61.72
linear_accel_random = 1.0
scale = 5.0
scale_curve = SubResource( 7 )
color = Color( 0, 1, 1, 1 )
hue_variation = 0.1

[node name="PowerSkull" type="RigidBody2D"]
collision_layer = 4
collision_mask = 2
mode = 2
physics_material_override = SubResource( 4 )
gravity_scale = 20.0
script = ExtResource( 4 )

[node name="Trail2D" type="Line2D" parent="."]
show_behind_parent = true
position = Vector2( 0, 14 )
points = PoolVector2Array( 0, -1 )
width_curve = SubResource( 5 )
default_color = Color( 0.94, 0.5, 0.5, 1 )
script = ExtResource( 5 )

[node name="Glow" type="Sprite" parent="."]
modulate = Color( 0.94, 0.5, 0.5, 1 )
position = Vector2( 2.55, 0 )
scale = Vector2( 0.05, 0.05 )
texture = ExtResource( 3 )

[node name="PowerSkull" type="Sprite" parent="."]
modulate = Color( 0.94, 0.5, 0.5, 1 )
scale = Vector2( 0.335938, 0.335938 )
z_index = 1
texture = ExtResource( 2 )
normal_map = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 3 )

[node name="Light2D" type="Light2D" parent="."]
texture = ExtResource( 3 )
texture_scale = 0.4
color = Color( 0.94, 0.5, 0.5, 1 )

[node name="OverlapDetector" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="OverlapDetector"]
position = Vector2( 0, -1 )
shape = SubResource( 2 )

[node name="Tween" type="Tween" parent="."]

[node name="Particles2D" type="Particles2D" parent="."]
amount = 20
lifetime = 0.5
randomness = 0.05
local_coords = false
process_material = SubResource( 8 )

[connection signal="body_entered" from="OverlapDetector" to="." method="_on_OverlapDetector_body_entered"]
